fix booking overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9233,8 +9233,8 @@ i {
   background-color: rgba(24, 136, 172, 0.7);
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  overflow: inherit;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  overflow: inherit; }
 
 .directions {
   position: relative; }
